2012-01-02 Borut Razem <borut.razem AT gmail.com>

	* sdcc/SDCC.lex: included unistd.h, needed by flex 2.5.4 on
	  NetBSD 5.0.1 sparc64 for read() declaration

2012-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/src.vcxproj: increased stack size 32M/64M so it never overflows
	* src/Makefile.in: added flex fast flag -f
	* src/SDCC.lex: removed preprocessor warning and error rules,
	  removed EOL after #... rules

2011-12-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/clean.mk: added z180 and r2k
	* sim/ucsim/cmd.src/cmdlex.l: fixed unused yyunput warning
	* src/hc08/main.c: removed unused BSEG
	* src/SDCCglue.c (glue): suppress unused segments
	* src/SDCCmem.c (allocMap, initMem): skip when name==NULL,
	  (allocGlobal): use x_abs for __at on z80, fixed bug 2040874
	* src/z80/main.c: removed ISEG, XSEG, BSEG, OVERLAY, added DABS (x_abs)
	* support/regression/fwk/include/testfwk.h,
	* support/regression/tests/absolute.c: z80 supports __at

2011-12-29 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/libcpp/lex.c:
	  partialy synchronized with sdcpp 4.6.[12]: no mmx, sse, altivec
	* support/cpp/version.c: updated version to 4.6.2
	* support/cpp/configure.in, support/cpp/configure,
	  support/cpp/config.in: WORDS endianness detection

2011-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.lex,
	* src/SDCC.y: fixed bugs 1810965 and 2698805
	* src/SDCCsymt.c (checkSClass): removed old hack-o-matic
	* support/regression/tests/bug1810965.c: new, added

2011-12-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Reduce stack space usage in recursion.

2011-12-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/r2k/setjmp.s,
	* device/lib/z180/setjmp.s,
	* device/lib/z80/setjmp.s: optimized
	* device/lib/r2k/*,
	* device/lib/z180/*,
	* device/lib/z80/*: use native eol

2011-12-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/setjmp.h: changed longjmp return type to void